# dining-philosopher

./: .gitignore  CMakeLists.txt  README.md
include/DiningPhilosopher/: CoordinatedPhilosopher.h  Fork.h  Globals.h  Koordinator.h  LLRPhilosoph.h  LRPhilosoph.h  RandomWaitReleasePhilosoph.h  Runnable.h  Runner.h  SemaPhilosoph.h  Semaphor.h  ThreadGroup.h  WaitReleasePhilosoph.h  philosoph.h
src/: CoordinatedPhilosopher.cpp  Fork.cpp  Koordinator.cpp  LLRPhilosoph.cpp  LRPhilosoph.cpp  RandomWaitReleasePhilosoph.cpp  Runnable.cpp  Runner.cpp  SemaPhilosoph.cpp  Semaphor.cpp  WaitReleasePhilosoph.cpp  main.cpp  philosoph.cpp
